--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -4449,36 +4449,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": 778,
    "id": "a93e09ba-0351-4acd-8eba-7b70e50d9756",
    "metadata": {},
    "outputs": [],
    "source": [
     "def replace_outliers_neighborhood_avg(data_frame, outlier_column_name='BrightnessEV_mean_outlier'):\n",
-    "\n",
+    "    # Copy the DataFrame to avoid modifying the original data\n",
     "    modified_data = data_frame.copy()\n",
     "    \n",
+    "    # Find indices of outliers\n",
     "    outlier_indices = modified_data.index[modified_data[outlier_column_name] == True].tolist()\n",
     "    \n",
+    "    # Loop through each outlier\n",
     "    for outlier_index in outlier_indices:\n",
+    "        # Extract trial and experimenter of the outlier\n",
     "        outlier_trial = modified_data.at[outlier_index, 'trial']\n",
     "        outlier_experimenter = modified_data.at[outlier_index, 'experimenter']\n",
     "        \n",
+    "        # Find data points belonging to the same trial and experimenter\n",
     "        same_trial_experimenter_data = modified_data[\n",
     "            (modified_data['trial'] == outlier_trial) &\n",
     "            (modified_data['experimenter'] == outlier_experimenter)\n",
     "        ]\n",
     "        \n",
+    "        # Calculate pairwise distances between data points\n",
     "        distances = cdist(\n",
     "            same_trial_experimenter_data[['BrightnessEV_mean']],\n",
     "            same_trial_experimenter_data[['BrightnessEV_mean']],\n",
     "            metric='euclidean'\n",
     "        )\n",
-    "\n",
-    "        neighborhood_threshold = 5 * np.std(same_trial_experimenter_data['BrightnessEV_mean'])\n",
+    "        \n",
+    "        # Set a threshold for neighborhood (e.g., 2 times standard deviation)\n",
+    "        neighborhood_threshold = 2 * np.std(same_trial_experimenter_data['BrightnessEV_mean'])\n",
+    "        \n",
+    "        # Find indices of data points within the neighborhood\n",
     "        neighborhood_indices = np.where(distances <= neighborhood_threshold)[0]\n",
+    "        \n",
+    "        # Calculate the mean of the neighborhood\n",
     "        neighborhood_mean = np.mean(same_trial_experimenter_data.iloc[neighborhood_indices]['BrightnessEV_mean'])\n",
+    "        \n",
+    "        # Replace the outlier with the neighborhood mean\n",
     "        modified_data.at[outlier_index, 'BrightnessEV_mean'] = neighborhood_mean\n",
+    "        \n",
+    "        # Update the outlier flag\n",
     "        modified_data.at[outlier_index, outlier_column_name] = False\n",
     "    \n",
     "    return modified_data"
@@ -4486,7 +4500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 784,
+   "execution_count": 779,
    "id": "281395be-181d-4473-a6fd-aae875179213",
    "metadata": {},
    "outputs": [],
@@ -4504,7 +4518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 780,
    "id": "557bae09-b450-49b5-8200-1a18294fa369",
    "metadata": {},
    "outputs": [],
@@ -4558,7 +4572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 786,
+   "execution_count": 781,
    "id": "fad4eb47-365c-46a2-b5a9-8d8ed4a3df97",
    "metadata": {},
    "outputs": [
@@ -4629,7 +4643,7 @@
        "      <td>False</td>\n",
        "      <td>0.054592</td>\n",
        "      <td>False</td>\n",
-       "      <td>-0.097568</td>\n",
+       "      <td>-0.080000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4653,7 +4667,7 @@
        "      <td>False</td>\n",
        "      <td>0.039841</td>\n",
        "      <td>False</td>\n",
-       "      <td>-0.075448</td>\n",
+       "      <td>-0.063817</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -4677,7 +4691,7 @@
        "      <td>False</td>\n",
        "      <td>0.046123</td>\n",
        "      <td>False</td>\n",
-       "      <td>-0.096376</td>\n",
+       "      <td>-0.079128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -4701,7 +4715,7 @@
        "      <td>False</td>\n",
        "      <td>0.063713</td>\n",
        "      <td>False</td>\n",
-       "      <td>-0.084448</td>\n",
+       "      <td>-0.070402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -4725,7 +4739,7 @@
        "      <td>False</td>\n",
        "      <td>0.059767</td>\n",
        "      <td>False</td>\n",
-       "      <td>-0.079331</td>\n",
+       "      <td>-0.066658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -4773,7 +4787,7 @@
        "      <td>False</td>\n",
        "      <td>0.059915</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.192721</td>\n",
+       "      <td>0.132363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>555</th>\n",
@@ -4797,7 +4811,7 @@
        "      <td>False</td>\n",
        "      <td>0.075504</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.155653</td>\n",
+       "      <td>0.105246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>556</th>\n",
@@ -4821,7 +4835,7 @@
        "      <td>False</td>\n",
        "      <td>0.106783</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.135252</td>\n",
+       "      <td>0.090322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>557</th>\n",
@@ -4845,7 +4859,7 @@
        "      <td>False</td>\n",
        "      <td>0.106783</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.135252</td>\n",
+       "      <td>0.090322</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>558</th>\n",
@@ -4869,7 +4883,7 @@
        "      <td>False</td>\n",
        "      <td>0.106783</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.135252</td>\n",
+       "      <td>0.090322</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4995,29 +5009,29 @@
        "558                                0.106783   \n",
        "\n",
        "     Sound pressure level (dB)_mean_outlier     pca_1  \n",
-       "0                                     False -0.097568  \n",
-       "1                                     False -0.075448  \n",
-       "2                                     False -0.096376  \n",
-       "3                                     False -0.084448  \n",
-       "4                                     False -0.079331  \n",
+       "0                                     False -0.080000  \n",
+       "1                                     False -0.063817  \n",
+       "2                                     False -0.079128  \n",
+       "3                                     False -0.070402  \n",
+       "4                                     False -0.066658  \n",
        "..                                      ...       ...  \n",
-       "554                                   False  0.192721  \n",
-       "555                                   False  0.155653  \n",
-       "556                                   False  0.135252  \n",
-       "557                                   False  0.135252  \n",
-       "558                                   False  0.135252  \n",
+       "554                                   False  0.132363  \n",
+       "555                                   False  0.105246  \n",
+       "556                                   False  0.090322  \n",
+       "557                                   False  0.090322  \n",
+       "558                                   False  0.090322  \n",
        "\n",
        "[559 rows x 49 columns]"
       ]
      },
-     "execution_count": 786,
+     "execution_count": 781,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pca = PrincipalComponentAnalysis()\n",
-    "pca.apply_pca(df, ['BrightnessEV_mean'], 1)"
+    "pca.apply_pca(df_with_outlier, ['BrightnessEV_mean'], 1)"
    ]
   },
   {
